# ut

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASE.md  dist-workspace.toml
.github/workflows/: release.yml  test.yml
scripts/: scrape-unicode.py
src/: args.rs  main.rs  tool.rs
src/data/: unicode.rs
src/tools/: base64.rs  bcrypt.rs  calc.rs  case.rs  cidr.rs  color.rs  cron.rs  crontab.rs  datetime.rs  diff.rs  hash.rs  http.rs  http_status.rs  ip.rs  json.rs  json_builder.rs  jwt.rs  lorem.rs  mod.rs  password.rs  pp.rs  proc.rs  qr.rs  random.rs  regex.rs  serve.rs  token.rs  ulid.rs  unicode.rs  url.rs  uuid.rs
src/tools/crypto/: hash.rs  mod.rs  token.rs  ulid.rs  uuid1.rs  uuid3.rs  uuid4.rs  uuid5.rs
src/tools/media/: qr.rs
