[package]
name = "ut"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base16ct = { version = "0.2.0", features = ["alloc"] }
base64ct = { version = "1.8.0", features = ["alloc"] }
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
csscolorparser = { version = "0.7.2", features = ["rgb"] }
digest = "0.10.7"
image = { version = "0.25.6", default-features = false, features = ["rayon", "bmp", "jpeg", "png", "webp", "color_quant"] }
md-5 = "0.10.6"
open = "5.3.2"
qrcode = "0.14.1"
rand = "0.9.1"
ripemd = "0.1.3"
serde_json = "1.0.140"
sha1 = "0.10.6"
sha2 = "0.10.9"
sha3 = "0.10.8"
ulid = "1.2.1"
uuid = { version = "1.7.0", features = ["v1", "v3", "v4", "v5", "v7"] }
