[package]
name = "ut"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/ksdme/ut"

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
clap = { version = "4.5.47", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
urlencoding = "2.1.3"
uuid = { version = "1.11.0", features = ["v1", "v3", "v4", "v5", "v7"] }
rust_decimal = { version = "1.38.0", features = ["macros", "maths"] }
nom = "7.1"
num-traits = "0.2.19"
qrcode = "0.14"
image = "0.25"
csscolorparser = { version = "0.7", features = ["lab"] }
edit = "0.1"
similar = "2.6"
colored = "2.1"
axum = "0.8"
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "util", "trace"] }
normalize-path = "0.2.1"
relative-path = "2.0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
html-escape = "0.2.13"
ratatui = "0.28"
crossterm = "0.28"
regex = "1.10"
tui-textarea = "0.6"
jiff = "0.1"
tabled = "0.18"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
